--- a/Projetos/Projeto 1/Projeto 1_Moises.ipynb
+++ b/Projetos/Projeto 1/Projeto 1_Moises.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,13 @@
     "    def __init__(self, *layers, classifier=True):\n",
     "        self.classifier = classifier\n",
     "        if classifier:\n",
-    "            self.class_mapping = dict()\n",
+    "            # Map each class label to a vector with a single 1\n",
+    "            # Ex: Class 0 -> [1,0]\n",
+    "            #     Class 1 -> [0,1]\n",
+    "            self.class_mapping = dict()  \n",
+    "            # Unmap each class vector to the corresponding class label\n",
+    "            # Ex: [1,0] -> Class 0 \n",
+    "            #     [0,1] -> Class 1\n",
     "            self.class_unmapping = dict()\n",
     "            \n",
     "        self.layers = list()\n",
@@ -108,19 +114,30 @@
     "            print(\"--- Layer: %d ---\" % i)\n",
     "            layer.description()\n",
     "            \n",
-    "    # __get_class_mapping\n",
+    "    # __get_class_mapping gets the class labels in the classes list and builds the mapping dicionaries\n",
+    "    # class_mapping and class_unmapping\n",
     "    def __get_class_mapping(self, classes):\n",
     "        class_labels = np.unique(classes)\n",
     "        \n",
     "        for c in range(len(class_labels)):\n",
-    "            class_label = np.zeros(len(class_labels))\n",
-    "            class_label[c] = 1\n",
-    "            self.class_mapping[class_labels[c]] = class_label\n",
+    "            class_label = class_labels[c]\n",
+    "            class_vector = np.zeros(len(class_labels))\n",
+    "            class_vector[c] = 1\n",
+    "    \n",
+    "            self.class_mapping[class_label] = class_vector\n",
     "            \n",
-    "            self.class_unmapping[tuple(class_label)] = class_labels[c]\n",
+    "            # We can't use a list as a hash key. So transform it into a tuple\n",
+    "            self.class_unmapping[tuple(class_vector)] = class_label\n",
     "        \n",
-    "        print(self.class_mapping)\n",
-    "        print(self.class_unmapping)\n",
+    "    # __convert_class_labels_to_vectors converts a list with class labels to a list with \n",
+    "    # vectors that maps each class label\n",
+    "    def __convert_class_labels_to_vectors(self, class_labels):\n",
+    "        return [self.class_mapping[c] for c in class_labels]\n",
+    "    \n",
+    "    # __convert_class_vectors_to_labels converts a list with class vectors to a list with \n",
+    "    # the corresponding class labels\n",
+    "    def __convert_class_vectors_to_labels(self, class_vectors):\n",
+    "        return [self.class_unmapping[tuple(class_vector)] for class_vector in class_vectors]\n",
     "        \n",
     "        \n",
     "    # fast_forward computes the ouput for a given input vector\n",
@@ -159,12 +176,13 @@
     "    #     is less than the tol value\n",
     "    # print_status prints the output for each example during the training phase\n",
     "    def train(self, samples, classes, eta=0.5, alpha=0, tol=1e-2, epoch_max=2000, print_status=False):\n",
-    "        # Map the classes to a (len(classes)) vector\n",
-    "        classes = [self.class_mapping[c] for c in classes]\n",
+    "        # Map the class labels to output vectors\n",
+    "        self.__get_class_mapping(classes)\n",
+    "        classes = self.__convert_class_labels_to_vectors(classes)\n",
     "        \n",
     "        print(self.class_mapping)\n",
     "        print(self.class_unmapping)\n",
-    "        \n",
+    "                \n",
     "        error = tol\n",
     "        new_error = 3*tol\n",
     "        epoch = 0\n",
@@ -259,14 +277,15 @@
     "            output = np.zeros(len(probs))\n",
     "            output[class_pos] = 1\n",
     "            \n",
-    "            outputs.append(self.class_unmapping[tuple(output)])\n",
+    "            #outputs.append(self.class_unmapping[tuple(output)])\n",
+    "            outputs.append(output)\n",
     "    \n",
-    "        return outputs"
+    "        return self.__convert_class_vectors_to_labels(outputs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +320,7 @@
        "[0, 1, 1, 0]"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 204,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,9 +331,158 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 209,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>fixed acidity</th>\n",
+       "      <th>volatile acidity</th>\n",
+       "      <th>citric acid</th>\n",
+       "      <th>residual sugar</th>\n",
+       "      <th>chlorides</th>\n",
+       "      <th>free sulfur dioxide</th>\n",
+       "      <th>total sulfur dioxide</th>\n",
+       "      <th>density</th>\n",
+       "      <th>pH</th>\n",
+       "      <th>sulphates</th>\n",
+       "      <th>alcohol</th>\n",
+       "      <th>category</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>7.4</td>\n",
+       "      <td>0.70</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>0.076</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>0.9978</td>\n",
+       "      <td>3.51</td>\n",
+       "      <td>0.56</td>\n",
+       "      <td>9.4</td>\n",
+       "      <td>Mid</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>7.8</td>\n",
+       "      <td>0.88</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>0.098</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>67.0</td>\n",
+       "      <td>0.9968</td>\n",
+       "      <td>3.20</td>\n",
+       "      <td>0.68</td>\n",
+       "      <td>9.8</td>\n",
+       "      <td>Mid</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>7.8</td>\n",
+       "      <td>0.76</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>0.092</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>54.0</td>\n",
+       "      <td>0.9970</td>\n",
+       "      <td>3.26</td>\n",
+       "      <td>0.65</td>\n",
+       "      <td>9.8</td>\n",
+       "      <td>Mid</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>11.2</td>\n",
+       "      <td>0.28</td>\n",
+       "      <td>0.56</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>0.075</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>0.9980</td>\n",
+       "      <td>3.16</td>\n",
+       "      <td>0.58</td>\n",
+       "      <td>9.8</td>\n",
+       "      <td>Mid</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>7.4</td>\n",
+       "      <td>0.70</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>0.076</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>0.9978</td>\n",
+       "      <td>3.51</td>\n",
+       "      <td>0.56</td>\n",
+       "      <td>9.4</td>\n",
+       "      <td>Mid</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0  fixed acidity  volatile acidity  citric acid  residual sugar  \\\n",
+       "0           0            7.4              0.70         0.00             1.9   \n",
+       "1           1            7.8              0.88         0.00             2.6   \n",
+       "2           2            7.8              0.76         0.04             2.3   \n",
+       "3           3           11.2              0.28         0.56             1.9   \n",
+       "4           4            7.4              0.70         0.00             1.9   \n",
+       "\n",
+       "   chlorides  free sulfur dioxide  total sulfur dioxide  density    pH  \\\n",
+       "0      0.076                 11.0                  34.0   0.9978  3.51   \n",
+       "1      0.098                 25.0                  67.0   0.9968  3.20   \n",
+       "2      0.092                 15.0                  54.0   0.9970  3.26   \n",
+       "3      0.075                 17.0                  60.0   0.9980  3.16   \n",
+       "4      0.076                 11.0                  34.0   0.9978  3.51   \n",
+       "\n",
+       "   sulphates  alcohol category  \n",
+       "0       0.56      9.4      Mid  \n",
+       "1       0.68      9.8      Mid  \n",
+       "2       0.65      9.8      Mid  \n",
+       "3       0.58      9.8      Mid  \n",
+       "4       0.56      9.4      Mid  "
+      ]
+     },
+     "execution_count": 209,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -324,9 +492,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 210,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 7.4     0.7     0.      1.9     0.076  11.     34.      0.9978  3.51\n",
+      "   0.56    9.4   ]\n",
+      " [ 7.8     0.88    0.      2.6     0.098  25.     67.      0.9968  3.2\n",
+      "   0.68    9.8   ]]\n",
+      "['Mid' 'Mid' 'Mid' ... 'Mid' 'Mid' 'Mid']\n"
+     ]
+    }
+   ],
    "source": [
     "# Separação dos Dados\n",
     "inputs = df[df.columns[1:-1]].values\n",
@@ -338,16 +518,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 184,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Bad', 'Good', 'Mid'], dtype=object)"
+      ]
+     },
+     "execution_count": 184,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.unique(classes)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,9 +628,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 186,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.52835961,  0.96187667, -1.39147228, ...,  1.28864292,\n",
+       "        -0.57920652, -0.96024611],\n",
+       "       [-0.29854743,  1.96744245, -1.39147228, ..., -0.7199333 ,\n",
+       "         0.1289504 , -0.58477711],\n",
+       "       [-0.29854743,  1.29706527, -1.18607043, ..., -0.33117661,\n",
+       "        -0.04808883, -0.58477711],\n",
+       "       ...,\n",
+       "       [-1.1603431 , -0.09955388, -0.72391627, ...,  0.70550789,\n",
+       "         0.54204194,  0.54162988],\n",
+       "       [-1.39015528,  0.65462046, -0.77526673, ...,  1.6773996 ,\n",
+       "         0.30598963, -0.20930812],\n",
+       "       [-1.33270223, -1.21684919,  1.02199944, ...,  0.51112954,\n",
+       "         0.01092425,  0.54162988]])"
+      ]
+     },
+     "execution_count": 186,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def data_normalization(data):\n",
     "    normalized_columns = list()\n",
@@ -540,9 +754,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 211,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Bad' 'Good' 'Mid']\n",
+      "[  63  217 1319]\n"
+     ]
+    }
+   ],
    "source": [
     "unique, counts = np.unique(classes, return_counts=True)\n",
     "print(unique)\n",
@@ -551,9 +774,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 212,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "63"
+      ]
+     },
+     "execution_count": 212,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "examples = min(counts)\n",
     "examples"
@@ -561,9 +795,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 213,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "189\n"
+     ]
+    }
+   ],
    "source": [
     "bad_indices = np.random.choice(np.where(classes == 'Bad')[0], examples)\n",
     "good_indices = np.random.choice(np.where(classes == 'Good')[0], examples)\n",
@@ -584,36 +826,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 214,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n classes: 3\n"
+     ]
+    }
+   ],
    "source": [
     "n_classes = len(np.unique(classes))\n",
-    "n_classes\n",
-    "\n",
-    "\n",
-    "map_classes = {\"Bad\": [1,0,0], \n",
-    "               \"Mid\": [0,1,0], \n",
-    "               \"Good\": [0,0,1]}\n",
-    "\n",
-    "mapped_under_sampled_classes = [map_classes[c] for c in under_sampled_classes]"
+    "print(\"n classes:\", n_classes)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 215,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'End of epoch 500. Total Error = 0.0007465955891267764'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "N = len(inputs[0])\n",
     "mlp = MLP(Layer(N, N), Layer(n_classes, N))\n",
     "\n",
-    "mlp.train(under_sampled_examples, mapped_under_sampled_classes, eta=0.5, alpha=0.5, tol=1e-8, epoch_max=3000, print_status=False)"
+    "mlp.train(under_sampled_examples, under_sampled_classes, eta=0.5, alpha=0.5, tol=1e-8, epoch_max=500, print_status=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -622,44 +875,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 221,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 221,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "accuracy_score(np.array(mapped_under_sampled_classes), np.array(predicted))"
+    "from sklearn.metrics import accuracy_score\n",
+    "accuracy_score(under_sampled_classes, predicted)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 222,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[63,  0,  0],\n",
+       "       [ 0, 63,  0],\n",
+       "       [ 0,  0, 63]])"
+      ]
+     },
+     "execution_count": 222,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from sklearn.metrics import confusion_matrix\n",
-    "unmap_classes = {\n",
-    "            (1,0,0):\"Bad\",\n",
-    "            (0,1,0):\"Mid\", \n",
-    "            (0,0,1):\"Good\"}\n",
-    "\n",
-    "unmapped_classes = [unmap_classes[tuple(c)] for c in mapped_under_sampled_classes]\n",
-    "unmapped_predicted = [unmap_classes[tuple(c)] for c in predicted]\n"
+    "confusion_matrix(under_sampled_classes, predicted)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "confusion_matrix(unmapped_classes, unmapped_predicted)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
