get class mapping only when it's a MLP Classifier

--- a/Projetos/Projeto 1/Projeto 1_Moises.ipynb
+++ b/Projetos/Projeto 1/Projeto 1_Moises.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 223,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,10 +176,11 @@
     "    #     is less than the tol value\n",
     "    # print_status prints the output for each example during the training phase\n",
     "    def train(self, samples, classes, eta=0.5, alpha=0, tol=1e-2, epoch_max=2000, print_status=False):\n",
-    "        # Map the class labels to output vectors\n",
-    "        self.__get_class_mapping(classes)\n",
-    "        classes = self.__convert_class_labels_to_vectors(classes)\n",
-    "        \n",
+    "        # Map the class labels to output vectors if it's a classification problem\n",
+    "        if self.classifier:\n",
+    "            self.__get_class_mapping(classes)\n",
+    "            classes = self.__convert_class_labels_to_vectors(classes)\n",
+    "\n",
     "        print(self.class_mapping)\n",
     "        print(self.class_unmapping)\n",
     "                \n",
@@ -285,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [
     {
@@ -754,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [
     {
@@ -767,6 +768,14 @@
     }
    ],
    "source": [
+    "df = pd.read_csv('winequality-red.csv')\n",
+    "df.head(5)\n",
+    "\n",
+    "inputs = df[df.columns[1:-1]].values\n",
+    "classes = df[df.columns[-1]].values\n",
+    "\n",
+    "normalized = data_normalization(inputs)\n",
+    "\n",
     "unique, counts = np.unique(classes, return_counts=True)\n",
     "print(unique)\n",
     "print(counts)"
@@ -774,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [
     {
@@ -783,7 +792,7 @@
        "63"
       ]
      },
-     "execution_count": 212,
+     "execution_count": 227,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -795,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [
     {
@@ -826,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [
     {
@@ -844,13 +853,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'End of epoch 500. Total Error = 0.0007465955891267764'"
+       "'End of epoch 500. Total Error = 0.016513983426427355'"
       ]
      },
      "metadata": {},
@@ -859,14 +868,14 @@
    ],
    "source": [
     "N = len(inputs[0])\n",
-    "mlp = MLP(Layer(N, N), Layer(n_classes, N))\n",
+    "mlp = MLP.MLPClassifier(Layer(N, N), Layer(n_classes, N))\n",
     "\n",
     "mlp.train(under_sampled_examples, under_sampled_classes, eta=0.5, alpha=0.5, tol=1e-8, epoch_max=500, print_status=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -875,16 +884,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.0"
+       "0.9894179894179894"
       ]
      },
-     "execution_count": 221,
+     "execution_count": 233,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -896,18 +905,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[63,  0,  0],\n",
-       "       [ 0, 63,  0],\n",
+       "array([[62,  0,  1],\n",
+       "       [ 1, 62,  0],\n",
        "       [ 0,  0, 63]])"
       ]
      },
-     "execution_count": 222,
+     "execution_count": 234,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1013,6 +1022,20 @@
    "outputs": [],
    "source": [
     "accuracy_score(np.array(mapped_classes), predicted)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Regression"
    ]
   },
   {
