evaluate split train-test in classification

--- a/Projetos/Projeto 1/Entrega/Projeto 1 - Classificação.ipynb
+++ b/Projetos/Projeto 1/Entrega/Projeto 1 - Classificação.ipynb
@@ -2543,7 +2543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2574,9 +2574,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'End of epoch 400. Total Error = 0.1633866935427087'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 84.17%\n",
+      "Confusion Matrix and Accuracy per class:\n",
+      "      Bad  Good  Mid  Accuracy\n",
+      "Bad     2     1   16  0.105263\n",
+      "Good    0    37   28  0.569231\n",
+      "Mid     1    30  365  0.921717\n",
+      "Average accuracy per class: 53.21%\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(0.8416666666666667, 0.5320703662808927)"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "X_train, X_test, y_train, y_test = train_test_split(scaled_inputs, classes, test_size=0.3, \n",
     "                                                    stratify=classes,random_state=42)\n",
@@ -2600,9 +2633,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'End of epoch 400. Total Error = 0.17691930674123232'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 84.00%\n",
+      "Confusion Matrix and Accuracy per class:\n",
+      "      Bad  Good  Mid  Accuracy\n",
+      "Bad     0     0   16  0.000000\n",
+      "Good    0    16   38  0.296296\n",
+      "Mid     0    10  320  0.969697\n",
+      "Average accuracy per class: 42.20%\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(0.84, 0.4219977553310887)"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "X_train, X_test, y_train, y_test = train_test_split(scaled_inputs, classes, test_size=0.25, \n",
     "                                                    stratify=classes,random_state=42)\n",
@@ -2626,9 +2692,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'End of epoch 400. Total Error = 0.1710581769015962'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 80.62%\n",
+      "Confusion Matrix and Accuracy per class:\n",
+      "      Bad  Good  Mid  Accuracy\n",
+      "Bad     0     0   13  0.000000\n",
+      "Good    0    15   28  0.348837\n",
+      "Mid     0    21  243  0.920455\n",
+      "Average accuracy per class: 42.31%\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(0.80625, 0.42309725158562367)"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "X_train, X_test, y_train, y_test = train_test_split(scaled_inputs, classes, test_size=0.2, \n",
     "                                                    stratify=classes,random_state=42)\n",
@@ -2652,9 +2751,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'End of epoch 400. Total Error = 0.1778925043554022'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 85.00%\n",
+      "Confusion Matrix and Accuracy per class:\n",
+      "      Bad  Good  Mid  Accuracy\n",
+      "Bad     0     0    9  0.000000\n",
+      "Good    0    14   19  0.424242\n",
+      "Mid     0     8  190  0.959596\n",
+      "Average accuracy per class: 46.13%\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(0.85, 0.4612794612794613)"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "X_train, X_test, y_train, y_test = train_test_split(scaled_inputs, classes, test_size=0.15, \n",
     "                                                    stratify=classes,random_state=42)\n",
@@ -2678,9 +2810,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'End of epoch 400. Total Error = 0.171274089212619'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 86.25%\n",
+      "Confusion Matrix and Accuracy per class:\n",
+      "      Bad  Good  Mid  Accuracy\n",
+      "Bad     0     0    6  0.000000\n",
+      "Good    0    10   12  0.454545\n",
+      "Mid     0     4  128  0.969697\n",
+      "Average accuracy per class: 47.47%\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(0.8625, 0.47474747474747475)"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "X_train, X_test, y_train, y_test = train_test_split(scaled_inputs, classes, test_size=0.1, \n",
     "                                                    stratify=classes,random_state=42)\n",
@@ -2704,9 +2869,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'End of epoch 400. Total Error = 0.1943626528283032'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 83.75%\n",
+      "Confusion Matrix and Accuracy per class:\n",
+      "      Bad  Good  Mid  Accuracy\n",
+      "Bad     0     0    3  0.000000\n",
+      "Good    0     4    7  0.363636\n",
+      "Mid     0     3   63  0.954545\n",
+      "Average accuracy per class: 43.94%\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(0.8375, 0.43939393939393945)"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "X_train, X_test, y_train, y_test = train_test_split(scaled_inputs, classes, test_size=0.05, \n",
     "                                                    stratify=classes,random_state=42)\n",
@@ -2725,11 +2923,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A partir das classificações realizadas, é possível observar que a variação nos tamanhos dos conjuntos de treinamento e teste resultaram em mudanças pouco significantes nos valores de acurácia obtidos. \n",
+    "A partir das classificações realizadas, é possível observar que utilizando 70% dos dados para treinamento e 30% dos dados para teste, obtivemos a melhor acurácia média por classe, enquanto que utilizando 90% dos dados para treinamento e 10% para teste, foi obtida a melhor acurácia geral.\n",
     "\n",
-    "Vale destacar que utilizando 70% dos dados para treinamento e 30% dos dados para teste, obtivemos a melhor acurácia média por classe, enquanto que utilizando 85% dos dados para treinamento e 15% para teste, foi obtida a melhor acurácia geral.\n",
-    "\n",
-    "Assim, como a diferença na acurácia geral de ambos os casos citados é de pouco mais de 1%, a divisão entre 70% e 30% será considerada como a que apresentou melhores resultados e será utilizada para os próximos testes daqui em diante."
+    "Entretanto, como utilizando 90% para treinamento, resulta-se em um conjunto de testes com apenas 3 exemplares da classe 'Bad', a divisão entre 70% e 30% será considerada como a que apresentou melhores resultados e será utilizada para os próximos testes daqui em diante."
    ]
   },
   {
