add comment about overfitting

--- a/Projetos/Projeto 1/Entrega/Projeto 1 -  Regressão.ipynb
+++ b/Projetos/Projeto 1/Entrega/Projeto 1 -  Regressão.ipynb
@@ -1544,7 +1544,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Adicionar comentário sobre possível overfitting"
+    "Analisando os dados acima, pode-se observar que o erro quadrático médio sempre diminui para o conjunto de treinamento ao aumentar a epoch. Entretanto, analisando os valores obtidos para o conjunto de teste, observa-se que o erro já começa a subir novamente à partir de 200 epochs, demonstrando a perda da capacidade de generalização da rede (overfitting). Portanto, utilizaremos 100 epochs como o número de iterações para as etapas seguintes. "
    ]
   },
   {
@@ -2615,7 +2615,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
